[package]
name = "command_cad"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
casey = "0.4"
clap = { version = "4.4", features = [ "derive", "wrap_help" ] }
compact_str = "0.7"
const-str = "0.5"
enum_dispatch = "0.3"
enum_downcast = { version = "0.1", features = [ "derive" ] }
fj = "0.48"
fortuples = "0.9"
git2 = "0.18"
has_impl = "0.1"
imstr = { git = "https://github.com/IamTheCarl/imstr", version = "0.2", features = [ "std", "nom" ] }
lazy_static = "1.4"
log = "0.4"
nom = "7.1"
nom_locate = "4.2"
ordered-float = "4.2"
ouroboros = "0.18"
paste = "1.0"
semver = { version = "1.0", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.113"
serde_yaml = "0.9"
uom = "0.35"
whoami = "1.4"
stderrlog = "0.6"
