workspace = { members = ["crates/common_data_types", "crates/macros", "crates/formatter", "crates/interpreter"] }
[package]
name = "command_cad"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
casey = "0.4"
clap = { version = "4.4", features = [ "derive", "wrap_help" ] }
compact_str = "0.7"
const-str = "0.5"
enum_dispatch = "0.3"
enum_downcast = { version = "0.1", features = [ "derive" ] }
fj-core = { git = "https://github.com/hannobraun/fornjot.git" }
fj-math = { git = "https://github.com/hannobraun/fornjot.git" }
fj-export = { git = "https://github.com/hannobraun/fornjot.git" }
fortuples = "0.9"
git2 = "0.18"
imstr = { git = "https://github.com/IamTheCarl/imstr", version = "0.2", features = [ "std", "nom" ] }
lazy_static = "1.4"
log = "0.4"
nom = "7.1"
nom_locate = "4.2"
paste = "1.0"
semver = { version = "1.0", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.113"
serde_yaml = "0.9"
uom = "0.35"
whoami = "1.4"
stderrlog = "0.6"
tempfile = "3.10"
common_data_types = { path = "crates/common_data_types" }
nalgebra = "0.32"
arrayvec = "0.7.4"
ouroboros = "0.18.3"
bezier-rs = "=0.4.0"
macros = { path = "crates/macros" }
glam = "0.24"

[build-dependencies]
csv = "1.3.0"
serde = { version = "1.0", features = [ "derive" ] }
uneval = "0.2.4"
common_data_types = { path = "crates/common_data_types" }
