[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
reedline = { version = "0.45.0", features = ["system_clipboard", "bashisms"] }
termimad = "0.34.1"
interpreter = { path = "../interpreter/" }
anyhow = "1.0.100"
ariadne = { workspace = true }
type-sitter = { workspace = true }
tree-sitter = { workspace = true }
nu-ansi-term = "0.50.3"
tempfile = { workspace = true }
git2 = { workspace = true }
