[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { version = "0.33", features = ["mint"] }
interpreter = { path = "../interpreter" }
anyhow = { workspace = true }
oneshot = "0.2"
tempfile = { workspace = true }
notify = "8"
bytemuck = "1"
nalgebra = { workspace = true }
bevy = "0.18.1"
bevy_egui = "0.39.1"
