[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
common_data_types = { path = "../common_data_types" }
units = { path = "../units" }
tree-sitter = { workspace = true }
tree-sitter-command-cad-model = { path = "../tree-sitter-command-cad-model" }
type-sitter = { workspace = true }
unwrap-enum = "0.1.0"
file-guard = "0.2.0"
enum_dispatch = "0.3"
enum_downcast = { version = "0.1", features = [ "derive" ] }
num-traits = "0.2"
hashable-map = "0.4.0"
imstr = "0.2.0"
nalgebra = "0.34.1"
stack = "0.4.0"
paste = "1.0.15"
tempfile = "3.24.0"
rayon = "1.11.0"
nom = "8.0.0"
ariadne = { workspace = true }
levenshtein = "1.0.5"

[build-dependencies]
type-sitter-gen = "0.8"
tree-sitter-command-cad-model = { path = "../tree-sitter-command-cad-model" }

[dev-dependencies]
pretty_assertions = "1.4"

