[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
common_data_types = { path = "../common_data_types" }
units = { path = "../units" }
tree-sitter = "0.24.4"
tree-sitter-command-cad-model = { path = "../tree-sitter-command-cad-model" }
type-sitter = "0.6"
unwrap-enum = "0.1.0"
file-guard = "0.2.0"
enum_dispatch = "0.3"
enum_downcast = { version = "0.1", features = [ "derive" ] }
compact_str = "0.9"
num-traits = "0.2"

[build-dependencies]
type-sitter-gen = "0.6"
tree-sitter-command-cad-model = { path = "../tree-sitter-command-cad-model" }
