[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-command-cad-model"
description = "Scripts for creating models in Command CAD"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "command-cad-model"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "James Carl" }]
requires-python = ">=3.9"
license.text = "AGPL"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/iamthecarl/commandcad"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
